# FastWorldGenGUI

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  main.cpp
configs/default/: FastWorldGenerator.json
configs/heightmap/: default.json
include/UI/: AreaUI.h  ClimateUI.h  DrawUtils.h  HeightmapUI.h  Prerequisites.h  UIContext.h  UIUtils.h  UiElements.h  fwgUI.h  landUI.h
resources/: uiHelpTexts.txt
source/UI/: AreaUI.cpp  ClimateUI.cpp  DrawUtils.cpp  HeightmapUI.cpp  UIUtils.cpp  UiElements.cpp  fwgUI.cpp  landUI.cpp
